Improved HTML validity

--- a/html/design.html
+++ b/html/design.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!--
               /\
              /MM\
@@ -16,49 +17,48 @@
 
      www.thomasrudge.co.uk
 -->
-<!doctype html>
 
 <html lang="en-GB">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Thomas Rudge: Graphic Design</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The graphic design portfolio of Thomas Rudge">
-  <meta name="author" content="Thomas Rudge">
-  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, graphic, design">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="The graphic design portfolio of Thomas Rudge" />
+  <meta name="author" content="Thomas Rudge" />
+  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, graphic, design" />
   <!-- Open Graph Properties-->
-  <meta property="og:locale" content="en_UK">
-  <meta property="og:title" content="Thomas Rudge">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://www.thomasrudge.co.uk">
-  <meta property="og:image" content="../images/bg/ogimage.gif">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:description" content="Graphic design portfolio of Thomas Edward Rudge.">
+  <meta property="og:locale" content="en_UK" />
+  <meta property="og:title" content="Thomas Rudge" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.thomasrudge.co.uk" />
+  <meta property="og:image" content="../images/bg/ogimage.gif" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:description" content="Graphic design portfolio of Thomas Edward Rudge." />
   <!-- CSS & JS -->
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/main.css" />
   <script type="text/javascript" src="../javascript/slides.js"></script>
   <!-- Icons-->
-  <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon-180x180.png">
-  <link rel="icon" type="image/png" href="../favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="../favicon/favicon-194x194.png" sizes="194x194">
-  <link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="../favicon/android-chrome-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="../favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="../favicon/manifest.json">
-  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon-180x180.png" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-194x194.png" sizes="194x194" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="../favicon/android-chrome-192x192.png" sizes="192x192" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-16x16.png" sizes="16x16" />
+  <link rel="manifest" href="../favicon/manifest.json" />
+  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -71,7 +71,7 @@
     </a>
     <header>
       <a href="../index.html">
-        <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
+        <img class=myphoto src="../images/logos/me.png" alt='Thomas Rudge' />
       </a>
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
@@ -154,105 +154,105 @@
         </li>
       </ul>
     </header>
-    <br>
+    <br />
     <div class=gen_div>
-      <img id=DESIGN src="../images/design/main.png" alt="Graphic Design Banner">
+      <img id=DESIGN src="../images/design/main.png" alt="Graphic Design Banner" />
     </div>
-    <br>
+    <br />
     <div id=noscript>
     "A webpage by any other name looks just as sweet.... except when you have javascript disabled." - William Shakespeare
     </div>
-    <br>
+    <br />
     <div class=rowcontainer>
       <div id=dimg01 class=design_div>
-        <img src="../images/design/4katalyst1.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg01')">
+        <img src="../images/design/4katalyst1.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg01')" />
         <p class='gen_text centred small_text invert_text'>The cover page of the Katalyst magazine, 4th edition.</p>
       </div>
       <div id=dimg02 class=design_div>
-        <img src="../images/design/4katalyst2.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg02')">
+        <img src="../images/design/4katalyst2.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg02')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 4th edition.</p>
       </div>
       <div id=dimg03 class=design_div>
-        <img src="../images/design/4katalyst3.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg03')">
+        <img src="../images/design/4katalyst3.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg03')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 4th edition.</p>
       </div>
     </div>
-    <br>
+    <br />
     <div class=rowcontainer>
       <div id=dimg04 class=design_div>
-        <img src="../images/design/4katalyst5.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg04')">
+        <img src="../images/design/4katalyst5.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg04')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 4th edition.</p>
       </div>
       <div id=dimg05 class=design_div>
-        <img src="../images/design/5katalyst1.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg05')">
+        <img src="../images/design/5katalyst1.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg05')" />
         <p class='gen_text centred small_text invert_text'>The editorial for the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg06 class=design_div>
-        <img src="../images/design/4katalyst4.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg06')">
+        <img src="../images/design/4katalyst4.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg06')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
     </div>
-    <br>
+    <br />
     <div class=rowcontainer id=rc1>
       <div id=dimg07 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg07')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg07')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg08 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg08')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg08')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg09 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg09')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg09')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
     </div>
-    <br>
+    <br />
     <div class=rowcontainer id=rc2>
       <div id=dimg10 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Logo' onclick="expandImageView('dimg10')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Logo' onclick="expandImageView('dimg10')" />
         <p class='gen_text centred small_text invert_text'>The logo of the Nepos cash management software.</p>
       </div>
       <div id=dimg11 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Splash Screen' onclick="expandImageView('dimg11')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Splash Screen' onclick="expandImageView('dimg11')" />
         <p class='gen_text centred small_text invert_text'>The splash screen of the Nepos cash management software.</p>
       </div>
     </div>
-    <br>
+    <br />
     <div class=rowcontainer id=rc3>  
       <div id=dimg12 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg12')">
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg12')" />
         <p class='gen_text centred small_text invert_text'>The cover page of a brochure create for Gunpati Stock Ltd.</p>
       </div>
       <div id=dimg13 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg13')">
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg13')" />
         <p class='gen_text centred small_text invert_text'>The inner page of a brochure create for Gunpati Stock Ltd.</p>
       </div>
       <div id=dimg14 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Annual Report' onclick="expandImageView('dimg14')">
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Annual Report' onclick="expandImageView('dimg14')" />
         <p class='gen_text centred small_text invert_text'>The cover page Gunpati Stock Ltd's Annual Report.</p>
       </div>
     </div>
-    <br>
+    <br />
     <div class=rowcontainer id=rc4>
       <div id=dimg15 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Business Directory' onclick="expandImageView('dimg15')">
-        <p class='gen_text centred small_text invert_text'>The cover page for a directory of local businesses,<br>created for the Obsidian Business Interface.</p>
+        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Business Directory' onclick="expandImageView('dimg15')" />
+        <p class='gen_text centred small_text invert_text'>The cover page for a directory of local businesses,<br />created for the Obsidian Business Interface.</p>
       </div>
       <div id=dimg16 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Event Report' onclick="expandImageView('dimg16')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Event Report' onclick="expandImageView('dimg16')" />
         <p class='gen_text centred small_text invert_text'>Obsidian Business Interface event report cover page.</p>
       </div>
       <div id=dimg17 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg17')">
-        <p class='gen_text centred small_text invert_text'>The cover page of an info-pack created for<br>Entrepreneurs Associates micro finance company.</p>
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg17')" />
+        <p class='gen_text centred small_text invert_text'>The cover page of an info-pack created for<br />Entrepreneurs Associates micro finance company.</p>
       </div>
       <div id=dimg18 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg18')">
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg18')" />
         <p class='gen_text centred small_text invert_text'>An inner page of the EA info-pack.</p>
       </div>
       <div id=dimg19 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg19')">
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg19')" />
         <p class='gen_text centred small_text invert_text'>An inner page of the EA info-pack.</p>
       </div>
     </div>
@@ -260,10 +260,10 @@
       <a id=arrow_left  class=arrow onclick='imageToggle(-1)'>&#10096;</a>
       <a id=arrow_right class=arrow onclick='imageToggle(1)'>&#10097;</a>
     </div>
-    <br>
-    <hr>
+    <br />
+    <hr />
     <footer class=relative_footer>
-    &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
+    &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br />
     Site not working properly? &#128534; <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
