--- a/html/software.html
+++ b/html/software.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!--
               /\
              /MM\
@@ -16,28 +17,27 @@
 
      www.thomasrudge.co.uk
 -->
-<!doctype html>
 
 <html lang="en-GB">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Thomas Rudge: Software</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Software created by Thomas Rudge">
-  <meta name="author" content="Thomas Rudge">
-  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, nepos, software">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Software created by Thomas Rudge" />
+  <meta name="author" content="Thomas Rudge" />
+  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, nepos, software" />
   <!-- Open Graph Properties-->
-  <meta property="og:locale" content="en_UK">
-  <meta property="og:title" content="Thomas Rudge">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://www.thomasrudge.co.uk">
-  <meta property="og:image" content="../images/bg/ogimage.gif">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:description" content="Software projects by Thomas Edward Rudge.">
+  <meta property="og:locale" content="en_UK" />
+  <meta property="og:title" content="Thomas Rudge" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.thomasrudge.co.uk" />
+  <meta property="og:image" content="../images/bg/ogimage.gif" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:description" content="Software projects by Thomas Edward Rudge." />
   <!-- CSS & JS -->
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/main.css" />
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
@@ -60,25 +60,25 @@
   }
   </script>
   <!-- Icons-->
-  <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon-180x180.png">
-  <link rel="icon" type="image/png" href="../favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="../favicon/favicon-194x194.png" sizes="194x194">
-  <link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="../favicon/android-chrome-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="../favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="../favicon/manifest.json">
-  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon-180x180.png" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-194x194.png" sizes="194x194" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="../favicon/android-chrome-192x192.png" sizes="192x192" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-16x16.png" sizes="16x16" />
+  <link rel="manifest" href="../favicon/manifest.json" />
+  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -91,7 +91,7 @@
     </a>
     <header>
       <a href="../index.html">
-        <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
+        <img class=myphoto src="../images/logos/me.png" alt='Thomas Rudge' />
       </a>
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
@@ -174,17 +174,17 @@
         </li>
       </ul>
     </header>
-    <br>
+    <br />
     <div class=gen_div>
       <p class='gen_text justify med_text margin40'>
-        <span class='gen_title title_text'>Software</span><br>
+        <span class='gen_title title_text'>Software</span><br />
         Below are some of the main software projects I have been working on over the years.
       </p>
     </div>
-    <hr>
+    <hr />
     <div class='gen_div margin40 mobile_parent' id=nepos>
       <a href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank" >
-        <img class='genphoto mobile_child img150' src="../images/logos/nepos_logo.png" alt="NEPOS Logo">
+        <img class='genphoto mobile_child img150' src="../images/logos/nepos_logo.png" alt="NEPOS" />
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnepos.software%2F&tabs=timeline&width=180&height=70&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" 
           width="180" height="70" style="border:none;overflow:hidden;margin-top: 8px;" scrolling="no" frameborder="0" allowTransparency="true">
         </iframe>
@@ -195,17 +195,17 @@
       and its libraries, at first seeing the task more as a learning exercise rather than anything serious. But a year and a half later 
       the first version of Nepos was released to the general public, and now it is currently being used by several businesses in the 
       north east of India.
-      <br><br>
+      <br /><br />
       Nepos's main features include: the POS interface; cash-flow, invoice, and loss records; end of day reporting; stock records and monitoring; 
       MI console; search screen for all records; archiving; customisable user profiles; user activity, archive, and error logs; and automatic alerts 
       to email and PushBullet. More details can be found on the 
       <a class=normal_link href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank">Nepos website</a>.     
       </p>
     </div>
-    <hr>
+    <hr />
     <div class='gen_div margin40 mobile_parent'>
       <a href="swift_page.html" title="MT940/50 Generator">
-        <img class='genphoto mobile_child img150' src="../images/logos/mt_logo.png" alt="MT Logo">
+        <img class='genphoto mobile_child img150' src="../images/logos/mt_logo.png" alt="MT Logo" />
       </a>
       <p class='gen_text justify med_text mobile_child'>
       One of my first jobs was as a System Administrator and a daily task was checking the banks swift messaging system for 
@@ -216,15 +216,15 @@
       I also created a version with a graphical user interface for a company in Germany that you can download <a class=normal_link href="" target="_blank">here</a>.
       </p>
     </div>
-    <hr>
+    <hr />
     <div class='gen_div fullwidth'>
       <p class='gen_text centred med_text'>
-      <img src='../favicon/favicon-16x16.png' alt='Small logo'> This website has its own <a class=normal_link href="https://github.com/Thomas-Rudge/personal-website" target="_blank">GitHub repo</a>, check it out.
+      <img src='../favicon/favicon-16x16.png' alt='Small logo' /> This website has its own <a class=normal_link href="https://github.com/Thomas-Rudge/personal-website" target="_blank">GitHub repo</a>, check it out.
       </p>
     </div>
-    <hr>
+    <hr />
     <footer class=relative_footer>
-    &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by international copyright law.<br><br>
+    &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by international copyright law.<br /><br />
     Site not working properly? &#128534; <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
