--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!--
 MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
 MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
@@ -17,28 +18,27 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
 
     www.thomasrudge.co.uk
 -->
-<!doctype html>
 
 <html lang="en-GB">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>MT Swift Generator</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Convert CSV to swift MT940 or MT950 cash statement messages.">
-  <meta name="author" content="Thomas Rudge">
-  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, swift, mt940, mt950, generator, convert">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Convert CSV to swift MT940 or MT950 cash statement messages." />
+  <meta name="author" content="Thomas Rudge" />
+  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, swift, mt940, mt950, generator, convert" />
   <!-- Open Graph Properties-->
-  <meta property="og:locale" content="en_UK">
-  <meta property="og:title" content="Thomas Rudge">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://www.thomasrudge.co.uk">
-  <meta property="og:image" content="../images/bg/ogimage.gif">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:description" content="Convert csv to swift MT940 or MT950 format.">
+  <meta property="og:locale" content="en_UK" />
+  <meta property="og:title" content="Thomas Rudge" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.thomasrudge.co.uk" />
+  <meta property="og:image" content="../images/bg/ogimage.gif" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:description" content="Convert csv to swift MT940 or MT950 format." />
   <!-- CSS & JS -->
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/main.css" />
   <script type="text/javascript" src="../javascript/MT940_50.js" async></script>
   <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
   <!-- Structured Data -->
@@ -53,25 +53,25 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
   }
   </script>
   <!-- Icons-->
-  <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon-180x180.png">
-  <link rel="icon" type="image/png" href="../favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="../favicon/favicon-194x194.png" sizes="194x194">
-  <link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="../favicon/android-chrome-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="../favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="../favicon/manifest.json">
-  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon-180x180.png" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-194x194.png" sizes="194x194" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="../favicon/android-chrome-192x192.png" sizes="192x192" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-16x16.png" sizes="16x16" />
+  <link rel="manifest" href="../favicon/manifest.json" />
+  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -86,7 +86,7 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
     Woops! You have Javascript disabled. Unfortunately this page is as useful as a chocolate teapot without it (but not as tasty).
     </div>
     <header>
-      <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
+      <img class=myphoto src="../images/logos/me.png" alt='Thomas Rudge' />
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
@@ -168,23 +168,23 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
         </li>
       </ul>
     </header>
-    <br>
+    <br />
     <div id=mtbanner class=gen_div>
-      <img id=small_mt_pic src="../images/logos/mt_logo_small.png" alt="MT Logo xs" height=75 width=75>
+      <img id=small_mt_pic src="../images/logos/mt_logo_small.png" alt="MT Logo xs" height=75 width=75 />
     </div>
     <div class=gen_div>
       <p class='gen_text justify med_text margin0'>
-        <span class='gen_title title_text'>Online MT940/950 Generator</span><br>
+        <span class='gen_title title_text'>Online MT940/950 Generator</span><br />
         This is an online swift MT940/950 generator. The header for the csv input file can be found 
         <a class=normal_link href='../other/input_file.txt' target='_blank'>here</a> 
         and the field definitions can be found 
         <a class=normal_link href="https://raw.githubusercontent.com/Thomas-Rudge/MT940_50_GEN/master/README.md" title="GitHub MT94050 ReadMe" target="_blank">here</a>
         . You can paste your own data into the first box, or use the default test data for a demonstration.
-        <br><br>
+        <br /><br />
         For more info see the bottom of the page.
       </p>
     </div><!-- SWIFT CONSOLE-->
-    <br>
+    <br />
     <div class=gen_div>
       <button onclick="startSwiftScript()" id=swift_button>Convert</button>
       <select name=genops style="margin: 0px 2px 5px 2px;">
@@ -202,11 +202,11 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
         <option value='DDMMYYYY'>DDMMYYYY</option>
         <option value='MMDDYYYY'>MMDDYYYY</option>
       </select>
-      <br>
+      <br />
       <p class='gen_text justify med_text form_text inline_item swift_block_title'>
       {1: Basic Header Block ---------------------------------
       </p>
-      <br>
+      <br />
       <p class='gen_text justify med_text form_text inline_item'>App ID:</p>
       <select name=genops>
         <option value='A'>A - General Purpose Application</option>
@@ -217,17 +217,17 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
       <select name=genops>
         <option value='01'>01 - FIN/GPA</option>
         <option value='21'>21 - ACK/NAK</option>
-      </select><br>
+      </select><br />
       <!-- ROW 2 -->
       <p class='gen_text justify med_text form_text inline_item'>Session#:</p>
       <input type="text" name=genops value="0000">
       <p class='gen_text justify med_text form_text inline_item'>Sequence#:</p>
       <input type="text" name=genops value="000000">
-      <br>
+      <br />
       <p class='gen_text justify med_text form_text inline_item swift_block_title'>
       {2: Application Header Block ---------------------------
       </p>
-      <br>
+      <br />
       <p class='gen_text justify med_text form_text inline_item'>Direction:</p>
       <select name=genops id=swift_direction onchange='directionOptions()'>
         <option value='I'>I - Inward</option>
@@ -239,7 +239,7 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
         <option value='S'>S - System</option>
         <option value='U'>U - Urgent</option>
       </select>
-      <br>
+      <br />
       <!-- ROW 3 -->
       <p class='gen_text justify med_text form_text inline_item'>Obsolescence:</p>
       <select name=genops id=in0>
@@ -254,35 +254,35 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
         <option value='2'>2 - Delivery Notification</option>
         <option value='3'>3 - Both (1 & 2)</option>
       </select>
-      <br>
+      <br />
       <!-- ROW 4 -->
       <p class='gen_text justify med_text form_text inline_item'>Input Time#:</p>
       <input type="text" name=genops id=out1 value="0000">
       <p class='gen_text justify med_text form_text inline_item'>Output Time#:</p>
       <input type="text" name=genops id=out2 value="1200">
-      <br>
+      <br />
       <!-- ROW 5 -->
       <p class='gen_text justify med_text form_text inline_item'>Output Date#:</p>
       <input type="text" name=genops id=out3 value="010101">
       <p class='gen_text justify med_text form_text inline_item'>Msg Input Ref#:</p>
       <input type="text" name=genops value="">
-      <br>
+      <br />
       <!-- ROW 6 -->
       <p class='gen_text justify med_text form_text inline_item swift_block_title'>
       {3: User Header Block ----------------------------------
       </p>
-      <br>
+      <br />
       <p class='gen_text justify med_text form_text inline_item'>Msg User Ref#:</p>
-      <input type="text" name=genops id=out0 value="MT940950GEN"><br>
+      <input type="text" name=genops id=out0 value="MT940950GEN"><br />
       <p class='gen_text justify med_text form_text inline_item'>Priority Code#:</p>
       <input type="text" name=genops value="">
-      <br>
+      <br />
       <p class='gen_text justify med_text form_text inline_item swift_block_title'>
       {5: Trailer Block --------------------------------------
       </p>
-      <br>
+      <br />
       <p class='gen_text justify med_text form_text inline_item'>Checksum#:</p>
-      <input type="text" name=genops value=""><br>
+      <input type="text" name=genops value=""><br />
     </div>
     <!-- SWIFT BOXES-->
     <div id=swiftboxes>
@@ -309,7 +309,7 @@ TEST12A,PIGGY123,ABC00070,1,2,D,M,2015-11-10,11824,2015-11-10,2015-11-10,C,33.33
     written in Javascript, so the conversion takes place in your browser and not on a hidden server somewhere. You can see both versions of the script on this 
     <a class=normal_link href="https://github.com/Thomas-Rudge/MT940_50_GEN" title="GitHub MT940/50 Generator" target="_blank">GitHub page</a>
     , or you can view the pages source files.
-    <br><br>
+    <br /><br />
     The input csv data must comply with RFC-4180 standards, with the only exception being that the generator cannot handle new-line characters 
     within cell values (though swift doesn't allow this in reference fields anyway). You can select the output message type using the drop-down 
     option. If left on auto the script will only produce an MT940 if it finds at least one record with a field 86 (Ref 4) populated. The advanced 
@@ -325,10 +325,10 @@ TEST12A,PIGGY123,ABC00070,1,2,D,M,2015-11-10,11824,2015-11-10,2015-11-10,C,33.33
     It's all riveting stuff.
     </p>
     </div>
-    <br>
-    <hr>
+    <br />
+    <hr />
     <footer class=relative_footer>
-    &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
+    &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br />
     Site not working properly? &#128534; <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
