--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!--
               /\
              /MM\
@@ -16,28 +17,27 @@
 
      www.thomasrudge.co.uk
 -->
-<!doctype html>
 
 <html lang="en-GB">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Thomas Rudge</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The personal website of Thomas Rudge. ">
-  <meta name="author" content="Thomas Rudge">
-  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="The personal website of Thomas Rudge. " />
+  <meta name="author" content="Thomas Rudge" />
+  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative" />
   <!-- Open Graph Properties-->
-  <meta property="og:locale" content="en_UK">
-  <meta property="og:title" content="Thomas Rudge">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://www.thomasrudge.co.uk">
-  <meta property="og:image" content="images/bg/ogimage.gif">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:description" content="The personal resume of Thomas Edward Rudge.">
+  <meta property="og:locale" content="en_UK" />
+  <meta property="og:title" content="Thomas Rudge" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.thomasrudge.co.uk" />
+  <meta property="og:image" content="images/bg/ogimage.gif" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:description" content="The personal resume of Thomas Edward Rudge." />
   <!-- CSS & JS -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css" />
   <script type="text/javascript" src="javascript/mobile_navigation.js" async></script>
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -55,25 +55,25 @@
   }
   </script>
   <!-- Icons-->
-  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png">
-  <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="favicon/favicon-194x194.png" sizes="194x194">
-  <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="favicon/manifest.json">
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png" />
+  <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon/favicon-194x194.png" sizes="194x194" />
+  <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png" sizes="192x192" />
+  <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16" />
+  <link rel="manifest" href="favicon/manifest.json" />
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -92,7 +92,7 @@
     ^^^
     </a>
     <header>
-      <img class=myphoto src="images/logos/me.png" alt='My head photo'>
+      <img class=myphoto src="images/logos/me.png" alt='Thomas Rudge' />
       <div id=headerdiv itemscope itemtype="http://schema.org/Person">
         <h1 class=myname itemprop="name">Thomas Rudge</h1>
         <nav id=mainnav>
@@ -174,7 +174,7 @@
         </li>
       </ul>
     </header>
-    <svg id=intro_svg viewBox="0 0 990 300" preserveAspectRatio="xMidYMid meet"'>
+    <svg id=intro_svg viewBox="0 0 990 300" preserveAspectRatio="xMidYMid meet">
       <defs>
         <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
           <stop offset="0%" style="stop-color:#01a2ff;stop-opacity:1" />
@@ -198,7 +198,7 @@
       ...my name is Thomas. I have a fairly long and varied history, but if there is one thing that ties it all together, it’s a desire for the novel combined with a strong ability to assimilate complex ideas quickly and effectively. I’m a Business Analyst, Process Expert and Administrator, self-taught Software Developer, Graphic Designer, and Photographer, who is currently dabbling in Web Design. Welcome to my site. 
       </p>
     </div>
-    <br><br>
+    <br /><br />
     <footer id=relative_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
     Site not working properly? <span class=main_glyph>&#128534;</span> <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
